--- a/app/src/main/res/layout/inicial.xml
+++ b/app/src/main/res/layout/inicial.xml
@@ -7,6 +7,7 @@
     
     <ImageView
 	   android:id="@+id/game_title"
+		android:src="@drawable/game_title_big"
        android:layout_width="fill_parent"
 	   android:layout_gravity="center_horizontal"
 	   android:layout_height="0px"
